--- a/chat/chat.css
+++ b/chat/chat.css
@@ -14,7 +14,7 @@
     height: 95vh;
     background-color: white;
     border-radius: 10px;
-    float: right;
+    justify-content: center;
 }
 
 #search-container,
