--- a/sign up/adminstyle.css
+++ b/sign up/adminstyle.css
@@ -18,11 +18,16 @@ label{
     font-size: 20px;
 }
 
+.input-group{
+    display: flex;
+    justify-content: space-between;
+}
+
 .input-group input{
     padding: 2px 10px; 
     height: 30px;
     font-size: 15px;
-    float: right;
+   
 }
 
 form > input:last-child{
