--- a/sign  in/style.css
+++ b/sign  in/style.css
@@ -1,3 +1,8 @@
+ body{
+     background-image: url(./backgr.jpg);
+     background-size: cover;
+ }
+
 .card{
     text-align: center;
     height: max-content;
