--- a/First/style.css
+++ b/First/style.css
@@ -1,6 +1,6 @@
 
 .container{
-    background-color: rgb(0, 128, 100);
+    background-image: url(./backgr.jpg);
     display: flex;
     justify-content: space-evenly;
 }
