--- a/chat/chat.css
+++ b/chat/chat.css
@@ -1,4 +1,6 @@
-
+body{
+    background-image: url(./backgr.jpg);
+}
 
 #chat-container{
     display: grid;
@@ -20,7 +22,7 @@
 #search-container,
 #conversation-list,
 #new-message-container{
-    background-color: rgb(0, 128, 100);
+    background-color: rgb(8, 95, 153);
   
 }
 
@@ -70,7 +72,7 @@
 
 .conversation.active,
 .conversation:hover{
-    background: rgb(1, 78, 62);
+    background: rgb(3, 72, 117);
 }
 
 .conversation:hover{
@@ -192,7 +194,7 @@
 }
 
 .other-message .message-text {
-    background: rgb(78, 143, 129);
+    background: rgb(10, 123, 199);
     color: #eee;
     border: 1px solid black;
     border-radius: 14px 14px 0 14px;
